--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<html>
-  <head><title>Projeto exemplo</title></head>
-  <body><h1>Projeto exemplo</h1></body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projeto exemplo</title>
+</head>
+<body>
+  <h1>Projeto exemplo</h1>
+</body>
 </html>
